<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentComputers">

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColor="@color/black"
        android:textSize="25dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="273dp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/status"
        android:textColor="@color/black"
        android:textSize="25dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="348dp" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:textColor="@color/black"
        android:textSize="25dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="474dp" />

    <EditText
        android:id="@+id/online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/online"
        android:inputType="datetime"
        android:textColor="@color/black"
        android:textSize="25dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="409dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorButton"
        android:text="@string/save"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="667dp" />

    <Switch
        android:id="@+id/stateBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:minHeight="48dp"
        android:text="задать статус"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="268dp"
        tools:layout_editor_absoluteY="341dp" />

    <EditText
        android:id="@+id/picked_date"
        android:layout_width="168dp"
        android:layout_height="44dp"
        android:hint="@string/date_edit_text_hint"
        android:inputType="date"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="548dp" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_date_text"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="544dp" />

    <EditText
        android:id="@+id/picked_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/time_edit_text_hint"
        android:inputType="time"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="606dp" />

    <Button
        android:id="@+id/btn_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_time_text"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="606dp" />

</FrameLayout>